Refactor code and improve account UI styling.
Removed inline CSS from JSP files and consolidated styles into `styles.css` for better maintainability. Updated the `LoginServlet` to enhance coding practices and fixed method usage with `.getFirst()`. Simplified JSPs by leveraging `<c:url>` for resource paths and included `<jsp:useBean>` for cleaner session management.